Fix misalignment

--- a/BetterDiscordAddons/Themes/modernx-discord.theme.source.css
+++ b/BetterDiscordAddons/Themes/modernx-discord.theme.source.css
@@ -2342,7 +2342,7 @@ body.foldercontentopened .base-2jDfDU {
 .panels-3wFtMD .container-YkUktl .directionRow-2Iu2A9 button[aria-label=Brukerinnstillinger],
 .panels-3wFtMD .container-YkUktl .directionRow-2Iu2A9 button[aria-label=Gebruikersinstellingen] {
     --user-settings-svg-size: 16px !important;
-    --user-setting-margin-left: 6px;
+    --user-setting-margin-left: -3px;
     position: fixed;
     top: calc((var(--server-outer-margin) * 2) + var(--avatar-dropdown-offset) + var(--menu-container-padding));
     right: calc(-10000px + var(--dropdown-width) + var(--user-outer-right-margin) - var(--menu-container-padding) + 32px + 8px);
